k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nlp-api-service
  namespace: ml-pipelines
spec:
  type: ClusterIP # Доступно только внутри кластера
  selector:
    app: nlp-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
